# ToDoApp

./: .env  .gitignore  Dockerfile  cli.py  compose.yaml  pyproject.toml  req.txt  requirments.txt  test.py
.github/workflows/: deploy-script.yml  deploy.yml
API_construct/: API_CONNECT.py  API_connect.py  main.py  new_main.py
TODOS/: todo_model.py  todo_repository.py  todo_schema.py
Users/: user_authentification.py  user_collection.py  user_model.py  user_repository.py
mongodb_connect/: mongo_connection.py
to_do_api/API/: API_connect.py
to_do_api/API_construct/: API_connect.py
to_do_api/Domains/to_dos/: schemas.py
to_do_api/Domains/users/: user_authentification.py
to_do_api/TODOS/: todo_model.py
to_do_api/mongodb_connect/: mongo_connection.py
to_do_app/: app.py
to_do_app/API/: API_connect.py  __init__.py
to_do_app/API/utils/: datetime.py  decorator_convert.py  token_expire.py
to_do_app/API/v1/: __init__.py  todos.py  users.py
to_do_app/Domains/users/: user_authentification.py
to_do_app/Infrastructure/DB/mongo_db/: mongo_construct.py
to_do_app/core/: config.py
to_do_app/dependences/auth/: dependeces.py
to_do_app/dependencies/auth/: dependencies.py  schemas.py
to_do_app/domains/to_dos/: flow.py  service.py
to_do_app/domains/todos/: flow.py  schemas.py  service.py
to_do_app/domains/users/: flow.py  schemas.py  service.py
