[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "ЕTO-DO-APP"
authors = ["Chris haznmo <haznmo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
motor = "^3.6.0"
uvicorn = "^0.32.0"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
security = "^1.3.1"
validators = "^0.34.0"
pydantic = {extras = ["email", "timezone"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
